pkg/apis/v1alpha1/testdata/clusterip.service.golden.yaml
metadata:
  creationTimestamp: null
  labels:
    api-gateway.consul.hashicorp.com/created: "-62135596800"
    api-gateway.consul.hashicorp.com/managed: "true"
    api-gateway.consul.hashicorp.com/name: test-clusterip
    api-gateway.consul.hashicorp.com/namespace: ""
  name: test-clusterip
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 0
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 0
  selector:
    api-gateway.consul.hashicorp.com/created: "-62135596800"
    api-gateway.consul.hashicorp.com/managed: "true"
    api-gateway.consul.hashicorp.com/name: test-clusterip
    api-gateway.consul.hashicorp.com/namespace: ""
  type: ClusterIP
status:
  loadBalancer: {}
